--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,10 @@ services:
       - dokploy-network
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.<unique-name>.rule=Host(`your-domain.com`)"
-      - "traefik.http.routers.<unique-name>.entrypoints=websecure"
-      - "traefik.http.routers.<unique-name>.tls.certResolver=letsencrypt"
-      - "traefik.http.services.<unique-name>.loadbalancer.server.port=3000"
+      - "traefik.http.routers.<cakebreadtvvv3>.rule=Host(`your-domain.com`)"
+      - "traefik.http.routers.<cakebreadtvvv3>.entrypoints=websecure"
+      - "traefik.http.routers.<cakebreadtvvv3>.tls.certResolver=letsencrypt"
+      - "traefik.http.services.<cakebreadtvvv3>.loadbalancer.server.port=3000"
 networks:
   dokploy-network:
     external: true
